--- a/51019-h/51019-h.htm
+++ b/51019-h/51019-h.htm
@@ -190,7 +190,12 @@ country where you are located before using this ebook.</p>
       Images of the original pages are available through
       Internet Archive/Canadian Libraries. See
       <a href="https://archive.org/details/labibliaenespa01borr">
-      https://archive.org/details/labibliaenespa01borr</a>
+      https://archive.org/details/labibliaenespa01borr</a><br />
+      <br />
+      Project Gutenberg has the other two volumes of this work.<br />
+      <a href="http://www.gutenberg.org/files/51020/51020-h/51020-h.htm">Tomo II</a>: see http://www.gutenberg.org/files/51020/51020-h/51020-h.htm<br />
+      <a href="http://www.gutenberg.org/files/51689/51689-h/51689-h.htm">Tomo III</a>: see http://www.gutenberg.org/files/51689/51689-h/51689-h.htm
+
     </td>
   </tr>
 </table>
